<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include layout="@layout/common_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="@string/service_text1"
                android:textColor="@color/tvtitle"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="易借宝     11月22日"
                android:textColor="#aeaeae"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="19dp"
                android:background="@mipmap/bannerserviceitem1"
                android:gravity="center"
                android:text="急用钱找我们，当天申请分分钟到账"
                android:textColor="#fff"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_service_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/service_text2"
                android:textColor="@color/tvtitle"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/bannerserviceitem2" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/bannerserviceitem3">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="易借宝：逾期上征信，逾期者名单已进行上报"
                    android:textColor="#ff8441"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </FrameLayout>


            <TextView
                android:id="@+id/tv_service_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/service_text3"
                android:textColor="@color/tvhint"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/bannerserviceitem5" />

            <TextView
                android:id="@+id/tv_service_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/service_text4"
                android:textColor="@color/tvhint"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:lineSpacingExtra="5dp"
                android:text="上央行征信对人们的影响"
                android:textColor="@color/tvtitle"
                android:textSize="13sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/bannerserviceitem6" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/bannerserviceitem4">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="监督：合法债务始终受法律保护，借款人应积极还款"
                    android:textColor="#ff8441"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </FrameLayout>


            <TextView
                android:id="@+id/tv_service_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/service_text5"
                android:textColor="@color/tvhint"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_service_text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/service_text6"
                android:textColor="@color/tvhint"
                android:textSize="13sp" />
        </LinearLayout>


    </ScrollView>


</LinearLayout>