<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/common_title"/>

    <ScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@mipmap/bannerarbitrationitem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/arbitration_text1"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/tvtitle"
                    android:textSize="13sp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_arbitration_item2"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/bannerarbitrationitem3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/bannerarbitrationitem2"
                        android:layout_width="11dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginStart="5dp"
                        android:textSize="12sp"
                        android:text="上图为仲裁生效证明书，点击可查看大图"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


                <ImageView
                    android:id="@+id/iv_arbitration_item3"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/bannerarbitrationitem5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/bannerarbitrationitem2"
                        android:layout_width="11dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginStart="5dp"
                        android:textSize="12sp"
                        android:text="上图为仲裁书部分内容，点击可查看大图"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:text="@string/arbitration_text2"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/tvtitle"
                    android:textSize="13sp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_arbitration_item4"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/bannerarbitrationitem4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:scaleType="fitXY"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/bannerarbitrationitem2"
                        android:layout_width="11dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginStart="5dp"
                        android:textSize="12sp"
                        android:text="上图为逾期用户名单，点击可查看大图"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:text="@string/arbitration_text3"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/tvtitle"
                    android:textSize="13sp"
                    android:lineSpacingExtra="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</LinearLayout>